--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,15 @@ body {
    */
   background-image: url('./images/bg-pattern.png');
 }
+button {
+  padding: 20px;
+}
+.modal {
+  padding: 1.8rem 2.16rem 0.9rem;
+  width: 550px;
+  max-width: 1300px;
+  background: #fff;
+  border-radius: 4px;
+  text-align: center;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+}
